[package]
name = "rust-voice-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
jsonwebtoken = "9"
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
rand = "0.8"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
url = "2"
